centered all images; added firefox on Android

--- a/mozilla-apps-talk.html
+++ b/mozilla-apps-talk.html
@@ -363,35 +363,76 @@ ul.auto-toc {
 </div>
 <div class="slide" id="mobile-apps">
 <h1>mobile apps</h1>
-<img alt="images/flurry-mobile-v-desktop-usage.png" src="images/flurry-mobile-v-desktop-usage.png" />
+<img alt="images/flurry-mobile-v-desktop-usage.png" class="center" src="images/flurry-mobile-v-desktop-usage.png" />
 </div>
 <div class="slide" id="the-rise-of-apps">
 <h1>The Rise of Apps</h1>
-<img alt="images/ipads-small.jpg" src="images/ipads-small.jpg" />
+<img alt="images/ipads-small.jpg" class="center" src="images/ipads-small.jpg" />
 </div>
 <div class="slide" id="mobile-players">
 <h1>Mobile Players</h1>
-<img alt="images/ios-logo.png" src="images/ios-logo.png" />
-<img alt="images/Android-Logo_thumb.jpg" src="images/Android-Logo_thumb.jpg" style="width: 220px;" />
+<img alt="images/ios-logo.png" class="center" src="images/ios-logo.png" />
+<img alt="images/Android-Logo_thumb.jpg" class="center" src="images/Android-Logo_thumb.jpg" style="width: 220px;" />
 </div>
 <div class="slide" id="open-web-apps">
 <h1>Open Web Apps</h1>
-<img alt="images/the-web-is-the-platform.png" src="images/the-web-is-the-platform.png" />
+<img alt="images/the-web-is-the-platform.png" class="center" src="images/the-web-is-the-platform.png" />
 </div>
 <div class="slide" id="the-web-players">
 <h1>The Web Players?</h1>
-<img alt="images/Facebook-apps.png" src="images/Facebook-apps.png" style="width: 250px;" />
-<img alt="images/google-chrome-logo.jpg" src="images/google-chrome-logo.jpg" style="width: 225px;" />
+<img alt="images/Facebook-apps.png" class="center" src="images/Facebook-apps.png" style="width: 250px;" />
+<img alt="images/google-chrome-logo.jpg" class="center" src="images/google-chrome-logo.jpg" style="width: 225px;" />
 </div>
 <div class="slide" id="firefox-os">
 <h1>Firefox OS</h1>
-<img alt="images/firefox-os-phone.png" src="images/firefox-os-phone.png" />
+<img alt="images/firefox-os-phone.png" class="center" src="images/firefox-os-phone.png" />
 <ul class="incremental simple">
 <li>Open Web Devices</li>
 <li>Open Web Apps</li>
 <li>Firefox Marketplace</li>
 <li>Identity</li>
 </ul>
+</div>
+<div class="slide" id="arewemobileyet-com">
+<h1>arewemobileyet.com</h1>
+<img alt="images/arewemobileyet.png" class="center" src="images/arewemobileyet.png" />
+</div>
+<div class="slide" id="apps-on-android">
+<h1>Apps on Android</h1>
+<img alt="images/firefox-on-android.jpg" class="center" src="images/firefox-on-android.jpg" />
+</div>
+<div class="slide" id="open-from-day-1">
+<h1>Open From Day 1</h1>
+<img alt="images/b2g-git.png" class="center" src="images/b2g-git.png" />
+</div>
+<div class="slide" id="partners">
+<h1>Partners</h1>
+<ul class="simple">
+<li>Telefonica</li>
+<li>?</li>
+<li>?</li>
+<li>?</li>
+</ul>
+</div>
+<div class="slide" id="raspberry-pi">
+<h1>Raspberry Pi</h1>
+<img alt="images/firefox-os-on-raspberry-pi.png" class="center" src="images/firefox-os-on-raspberry-pi.png" />
+</div>
+<div class="slide" id="id1">
+<h1>Firefox OS</h1>
+<ul class="simple">
+<li>Gonk</li>
+<li>Gecko</li>
+<li>Gaia</li>
+</ul>
+</div>
+<div class="slide" id="id2">
+<h1>Firefox OS</h1>
+<img alt="images/openwebdevices.png" src="images/openwebdevices.png" />
+</div>
+<div class="slide" id="id3">
+<h1>Firefox OS</h1>
+<img alt="images/b2g_screens_2_1000.jpg" class="center" src="images/b2g_screens_2_1000.jpg" style="width: 800px;" />
 </div>
 <div class="slide" id="manifest-webapp">
 <h1>manifest.webapp</h1>
@@ -428,64 +469,27 @@ ul.auto-toc {
 </div>
 <div class="slide" id="run-web-apps-anywhere">
 <h1>Run web apps anywhere</h1>
-<img alt="images/mozmarket-all-platforms.png" src="images/mozmarket-all-platforms.png" />
-</div>
-<div class="slide" id="open-from-day-1">
-<h1>Open From Day 1</h1>
-<img alt="images/b2g-git.png" src="images/b2g-git.png" />
-</div>
-<div class="slide" id="partners">
-<h1>Partners</h1>
-<ul class="simple">
-<li>Telefonica</li>
-<li>?</li>
-<li>?</li>
-<li>?</li>
-</ul>
-</div>
-<div class="slide" id="raspberry-pi">
-<h1>Raspberry Pi</h1>
-<img alt="images/firefox-os-on-raspberry-pi.png" src="images/firefox-os-on-raspberry-pi.png" />
-</div>
-<div class="slide" id="id1">
-<h1>Firefox OS</h1>
-<ul class="simple">
-<li>Gonk</li>
-<li>Gecko</li>
-<li>Gaia</li>
-</ul>
-</div>
-<div class="slide" id="id2">
-<h1>Firefox OS</h1>
-<img alt="images/openwebdevices.png" src="images/openwebdevices.png" />
-</div>
-<div class="slide" id="id3">
-<h1>Firefox OS</h1>
-<img alt="images/b2g_screens_2_1000.jpg" src="images/b2g_screens_2_1000.jpg" style="width: 800px;" />
-</div>
-<div class="slide" id="arewemobileyet-com">
-<h1>arewemobileyet.com</h1>
-<img alt="images/arewemobileyet.png" src="images/arewemobileyet.png" />
+<img alt="images/mozmarket-all-platforms.png" class="center" src="images/mozmarket-all-platforms.png" />
 </div>
 <div class="slide" id="firefox-marketplace">
 <h1>Firefox Marketplace</h1>
-<img alt="images/marketplace.png" src="images/marketplace.png" />
+<img alt="images/marketplace.png" class="center" src="images/marketplace.png" />
 </div>
 <div class="slide" id="installing-apps">
 <h1>Installing apps</h1>
-<img alt="images/marketplace-install.png" src="images/marketplace-install.png" />
+<img alt="images/marketplace-install.png" class="center" src="images/marketplace-install.png" />
 </div>
 <div class="slide" id="in-app-payments">
 <h1>In-app Payments</h1>
-<img alt="images/drawsome-dash.PNG" src="images/drawsome-dash.PNG" style="width: 384px;" />
+<img alt="images/drawsome-dash.PNG" class="center" src="images/drawsome-dash.PNG" style="width: 384px;" />
 </div>
 <div class="slide" id="id4">
 <h1>In-app Payments</h1>
-<img alt="images/drawsome-coin-shop.PNG" src="images/drawsome-coin-shop.PNG" style="width: 384px;" />
+<img alt="images/drawsome-coin-shop.PNG" class="center" src="images/drawsome-coin-shop.PNG" style="width: 384px;" />
 </div>
 <div class="slide" id="id5">
 <h1>In-app Payments</h1>
-<img alt="images/drawsome-skrillex.PNG" src="images/drawsome-skrillex.PNG" style="width: 384px;" />
+<img alt="images/drawsome-skrillex.PNG" class="center" src="images/drawsome-skrillex.PNG" style="width: 384px;" />
 </div>
 <div class="slide" id="id6">
 <h1>In-app Payments</h1>
@@ -494,11 +498,11 @@ ul.auto-toc {
 </div>
 <div class="slide" id="id7">
 <h1>In-app Payments</h1>
-<img alt="images/inapp-pay.png" src="images/inapp-pay.png" />
+<img alt="images/inapp-pay.png" class="center" src="images/inapp-pay.png" />
 </div>
 <div class="slide" id="identity">
 <h1>Identity</h1>
-<img alt="images/persona-id.png" src="images/persona-id.png" />
+<img alt="images/persona-id.png" class="center" src="images/persona-id.png" />
 </div>
 <div class="slide" id="id8">
 <h1>Identity</h1>
